cinema app first commit